css/style.css
/* ... */
.widget ul,
.article-entry ul {
  list-style: disc;
  list-style-position: inside;
}
.widget ol,
.article-entry ol {
  list-style: decimal;
  list-style-position: inside;
}
.widget dt,
.article-entry dt {
  font-weight: bold;
  list-style-position: inside;
}
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td {
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  font-weight: inherit;
  font-style: inherit;
  font-family: inherit;
  font-size: 100%;
  vertical-align: baseline;
}
body {
  line-height: 1;
  color: #000;
  background: #fff;
}
ol,
ul {
  list-style: none;
}
table {
  border-collapse: separate;
  border-spacing: 0;
  vertical-align: middle;
}
caption,
th,
td {
  text-align: left;
  font-weight: normal;
  vertical-align: middle;
}
a img {
  border: none;
}
input,
button {
  margin: 0;
  padding: 0;
}
input::-moz-focus-inner,
button::-moz-focus-inner {
  border: 0;
  padding: 0;
}
html,
body,
#container {
  height: 100%;
}
::selection {
  color: #fff;
  background: #03a9f4;
}
body {
  background: #eaeaea;
  font: 14px "Titillium Web", "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", sans-serif;
  -webkit-text-size-adjust: 100%;
}
.container {
  position: relative;
  padding: 0 20px;
}
.container-inner {
  max-width: 1120px;
  min-width: 320px;
  width: 100%;
  margin: 0 auto;
}
.container-inner:before,
.container-inner:after {
  content: "";
  display: table;
}
.container-inner:after {
  clear: both;
}
.left,
.alignleft {
  float: left;
}
.right,
.alignright {
  float: right;
}
.clear {
  clear: both;
}
.logo {
  display: block;
  padding: 10px 0;
  width: 165px;
  height: 60px;
  background-image: url("images/logo-header.png");
  background-position: 0px 10px;
  background-repeat: no-repeat;
  -webkit-background-size: 165px 60px;
  -moz-background-size: 165px 60px;
  background-size: 165px 60px;
}
.main-body {
  margin-top: -60px;
  background-color: #fff;
}
.main-body-inner {
  position: relative;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  -webkit-box-shadow: 0px 1px 4px rgba(0,0,0,0.5);
  box-shadow: 0px 1px 4px rgba(0,0,0,0.5);
  padding-right: 260px;
  background: url("images/s-left.png") repeat-y right 0;
}
.main-body-inner:before,
.main-body-inner:after {
  content: "";
  display: table;
}
.main-body-inner:after {
  clear: both;
}
#main {
  float: left;
  width: 100%;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  min-height: 600px;
}
#main .main-body-header {
  background: #fff;
  position: relative;
  padding: 18px 30px 17px;
  border-bottom: 1px solid #eee;
  color: #666;
  font-size: 16px;
  font-weight: 600;
  text-transform: uppercase;
  line-height: 24px;
}
#main .main-body-header .page-title-link,
#main .main-body-header i {
  margin-right: 8px;
}
#main .main-body-header i {
  font-weight: 400;
}
#main .main-body-header em,
#main .main-body-header a {
  color: #aaa;
}
#main .main-body-content:before,
#main .main-body-content:after {
  content: "";
  display: table;
}
#main .main-body-content:after {
  clear: both;
}
#header {
  background: #0277bd;
  padding-bottom: 60px;
  position: relative;
}
#header-outer {
  height: 100%;
  position: relative;
}
#header-inner {
  position: relative;
}
#header-title {
  text-align: center;
}
#header-title:before,
#header-title:after {
  content: "";
  display: table;
}
#header-title:after {
  clear: both;
}
#header-title .logo-wrap {
  padding: 30px 0px 0px 0px;
}
#header-title .subtitle-wrap {
  display: block;
}
#header-title .subtitle {
  font-size: 30px;
  line-height: 20px;
  margin-bottom: 20px;
  color: #fff;
  text-shadow: 0 2px rgba(0,0,0,0.5);
}
.nav-container .nav-icon,
.nav-container .nav-container-inner #main-nav .main-nav-list-item .main-nav-list-link {
  float: left;
  color: rgba(255,255,255,0.7);
  text-decoration: none;
  text-shadow: 0 1px rgba(0,0,0,0.2);
  display: block;
  padding: 20px 15px;
  -webkit-transition: 0.2s ease-in;
  -moz-transition: 0.2s ease-in;
  -ms-transition: 0.2s ease-in;
  transition: 0.2s ease-in;
}
.nav-container .nav-icon:hover,
.nav-container .nav-container-inner #main-nav .main-nav-list-item .main-nav-list-link:hover {
  color: #fff;
  background: rgba(0,0,0,0.1);
}
#header-placeholder {
  height: 50px;
}
.nav-container {
  background: #01579b;
  z-index: 9;
  -webkit-box-shadow: 0px 2px 4px rgba(0,0,0,0.5);
  box-shadow: 0px 2px 4px rgba(0,0,0,0.5);
}
.nav-container:before,
.nav-container:after {
  content: "";
  display: table;
}
.nav-container:after {
  clear: both;
}
.nav-container .nav-icon {
  line-height: 20px;
  padding: 15px 14px;
  text-align: center;
  font-size: 14px;
  position: relative;
  cursor: pointer;
}
.nav-container #main-nav-toggle {
  display: none;
  height: 50px;
  width: 100%;
  text-align: right;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  border-bottom: 1px solid rgba(255,255,255,0.06);
}
.nav-container #main-nav-toggle:before {
  content: "\f0c9";
}
.nav-container .nav-container-inner:before,
.nav-container .nav-container-inner:after {
  content: "";
  display: table;
}
.nav-container .nav-container-inner:after {
  clear: both;
}
.nav-container .nav-container-inner #main-nav {
  float: left;
}
.nav-container .nav-container-inner #main-nav .main-nav-list {
  float: left;
}
.nav-container .nav-container-inner #main-nav .main-nav-list-item {
  position: relative;
  float: left;
}
/* ... */

